# WangYiTest

./: README.md
app/: build.gradle
app/src/androidTest/java/com/example/wangyipush/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/include/: x264.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/example/wangyipush/: LivePusher.java  MainActivity.java
app/src/main/java/com/example/wangyipush/Media/: AudioChannel.java  CameraHelper.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/wangyipush/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
